address+:active+href-logo

--- a/css/style.css
+++ b/css/style.css
@@ -64,9 +64,16 @@ body {
     color: var(--navy-blue);
 }
 
-.menu-nav .link:hover,
+.menu-nav .link:hover {
+    color: var(--ocean);
+}
+
 .menu-nav .link:active {
     color: var(--ocean);
+}
+
+.address {
+    font-style: normal;
 }
 
 .address .info .link {
@@ -74,10 +81,12 @@ body {
     color: var(--slate);
     letter-spacing: 0.02em;
     line-height: 1.5;
-    font-style: normal;
 }
 
-.address .info .link:hover,
+.address .info .link:hover {
+    color: var(--ocean);
+}
+
 .address .info .link:active {
     color: var(--ocean);
 }
@@ -104,7 +113,10 @@ body {
     background-color: var(--iris);
 }
 
-.page-title .button:hover,
+.page-title .button:hover {
+    background-color: var(--ocean);
+}
+
 .page-title .button:active {
     background-color: var(--ocean);
 }
