--- a/css/style.css
+++ b/css/style.css
@@ -64,16 +64,9 @@ body {
     color: var(--navy-blue);
 }
 
-.menu-nav .link:hover {
+.menu-nav .link:hover,
+.menu-nav .link:focus {
     color: var(--ocean);
-}
-
-.menu-nav .link:active {
-    color: var(--ocean);
-}
-
-.address {
-    font-style: normal;
 }
 
 .address .info .link {
@@ -81,13 +74,11 @@ body {
     color: var(--slate);
     letter-spacing: 0.02em;
     line-height: 1.5;
+    text-decoration: none;
 }
 
-.address .info .link:hover {
-    color: var(--ocean);
-}
-
-.address .info .link:active {
+.address .info .link:hover,
+.address .info .link:focus {
     color: var(--ocean);
 }
 
@@ -113,11 +104,8 @@ body {
     background-color: var(--iris);
 }
 
-.page-title .button:hover {
-    background-color: var(--ocean);
-}
-
-.page-title .button:active {
+.page-title .button:hover,
+.page-title .button:focus {
     background-color: var(--ocean);
 }
 
